@@ -2,6 +2,8 @@ Alpha 0.1.8.22
 - Abort initialization in certain invalid environments.
 - Added information about why a command failed if the plugin failed to initialize properly.
 - Updated bStats.
+- Fixed portcullisses and sliding doors getting 'stuck' when they could not find a direction to go in.
+- Added configurable, global blocksToMove limit for doors such as sliding doors. This should help avoid unnecessary stress for servers caused by malicious players. Thanks, @Jim for the suggestion!
 
 Alpha 0.1.8.21
 - Fixed concurrency issue where a door could be toggled more than once under specific circumstances.
